# Nebula

./: .env_docker_example  .gitignore  LICENSE  README.md  docker-compose-full.yml  docker-compose.yml
backend/rust-service/: .env.example  .env_docker  .gitignore  Cargo.toml  Dockerfile  clippy.toml
backend/rust-service/src/: lib.rs  main.rs
backend/rust-service/src/api/: error.rs  mod.rs  server.rs
backend/rust-service/src/api/errors/: auth_mapping.rs  email_mapping.rs  media_mapping.rs  mod.rs  session_mapping.rs  user_mapping.rs
backend/rust-service/src/api/handlers/: auth_handlers.rs  dev_handlers.rs  mod.rs  session_handler.rs  user_handlers.rs
backend/rust-service/src/api/middleware/: auth_mw.rs  mod.rs  user_mw.rs
backend/rust-service/src/api/routes/: auth_routes.rs  dev_routes.rs  mod.rs  user_routes.rs
backend/rust-service/src/application/: app.rs  config.rs  state.rs
backend/rust-service/src/application/repository/: address_repo.rs  mod.rs  oauth_repo.rs  session_repo.rs  user_repo.rs
backend/rust-service/src/application/security/: argon.rs  auth.rs  jwt.rs  mod.rs  roles.rs  session.rs
backend/rust-service/src/application/service/: auth_service.rs  email_service.rs  jwt_service.rs  media_service.rs  mod.rs  session_service.rs  snowflake_service.rs  username_service.rs
backend/rust-service/src/domain/: mod.rs
backend/rust-service/src/domain/models/: address.rs  mod.rs  oauth_account.rs  session.rs  user.rs
backend/rust-service/src/domain/session/: error.rs  mod.rs  session_token.rs  token.rs
backend/rust-service/src/domain/user/: email.rs  error.rs  mod.rs  phone_number.rs  username.rs
(+337 files in other folders)
