[package]
name = "nebula"
version = "0.0.1"
license = "MIT"
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/AnythingAnywhereEverything/Nebula.git"

[dependencies]
dotenvy = "0.15"
axum = { version = "0.8", features = ["multipart", "macros"]}
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1.44", features = ["full"] }
bytes = "1.10"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = { version = "0.1" }
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.16", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

redis = { version = "0.32", features = ["tokio-comp", "safe_iterators"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "macros",
    "chrono",
] }

jsonwebtoken = { version = "9.3" }
rand = "0.9.2"
base64 = "0.22.1"
argon2 = "0.5.3"
reqwest = { version = "0.12", features = ["json"] }
axum-client-ip = "1.3.1"
deadpool-redis = "0.22.1"
libvips = "1.7.3"
infer = "0.19.0"
regex = "1.12.3"
once_cell = "1.21.3"

[dev-dependencies]
serial_test = "3.2"
reqwest = { version = "0.12", features = ["json"] }
